[project]
name = "mood-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "buildozer>=1.5.0",
    "cython>=3.1.2",
    "kivy>=2.3.1",
    "kivy-ios>=2025.5.17",
    "kivymd @ git+https://github.com/kivymd/KivyMD.git@master",
]
