[project]
name = "mood-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "buildozer>=1.5.0",
    "cython>=3.1.2",
    "kivy>=2.3.1",
    "kivy-ios>=2025.5.17",
    "kivy-reloader>=0.7.2",
    "kivymd @ git+https://github.com/kivymd/KivyMD.git@master",
    "plyer>=2.1.0",
    "pyjnius>=1.6.1",
]
